--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ h1 {
 
 h2 { color: #141A28; }
 
-section {padding: 20px; margin: 20px;}
+section {padding-bottom: 20px; padding-top: 20px;}
 
 .container {
     width: 960px;
@@ -87,12 +87,16 @@ main {width: 100%;}
 
 .super-card-img, 
 .super-card-img img {
-    width: 800px;
+    width: 450px;
     border-radius: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+#list{
+    padding-left: 20px;
 }
 
 .super-card-img h2 {margin-top: 20px;}
@@ -157,7 +161,7 @@ main {width: 100%;}
     opacity: .75;
 }
 
-.portfolio {background-color: #FFF; width: 100%;}
+#portfolio {background-color: #FFF; width: 100%;}
 
 
 .contact {flex-direction: column;}
